<resources>
    <string name="app_name">游游购</string>
    <string name="action_settings">设置</string>
    <string name="iti_from">出发地</string>
    <string name="iti_to">目的地</string>
    <string name="product_category">物品类别</string>
    <string name="select">筛选条件</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="password_confirm">确认密码</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="forgot_password">忘记密码?</string>
    <string name="register">注册用户</string>
    <string name="email">邮箱</string>
    <string name="passconfirm">确认密码</string>
    <string name="scheduledetail">行程详情</string>
    <string name="departure_time">出发时间</string>
    <string name="arrival_time">到达时间</string>
    <string name="maxweight">最大质量(kg)</string>
    <string name="maxvolume">最大体积(cm3)</string>
    <string name="preferred_category">优先物品类别</string>
    <string name="detailedinformation">详细信息</string>
    <string name="contact_traveller">联系游客</string>
    <string name="myschedule">我的行程</string>
    <string name="schedule">行程</string>
    <string name="description">描述</string>
    <string name="requirement">需求</string>
    <string name="confirm">确认</string>
    <string name="mymessage">我的消息</string>
    <string name="otherlogin">其他登录方式</string>
    <string name="phonenumber">手机号(可选)</string>
    <string name="phone_number">手机号</string>
    <string name="address">地址(可选)</string>
    <string name="Address">地址</string>
    <string name="i_buy">我买东西</string>
    <string name="i_travel">我要旅行</string>
    <string name="take_photo">拍照</string>
    <string name="collect_location1">收货地</string>
    <string name="expecttime">预期时间</string>
    <string name="brand">品牌</string>
    <string name="product_origin1">原产地</string>
    <string name="number">数量</string>
    <string name="price">出价</string>
    <string name="shoppingdetail">购物详情</string>
    <string name="contact_requester">联系买家</string>
    <string name="order">订单</string>
    <string name="home">主页</string>
    <string name="buysome">我买东西</string>
    <string name="kind">类别</string>
    <string name="hignscore">评分最高</string>
    <string name="lowfee">服务费最低</string>
    <string name="hignfee">付费最高</string>
    <string name="mySetting">我的设置</string>
    <string name="publish">我要发布</string>
    <string name="product_origin">原产地: </string>
    <string name="collect_location">收货地: </string>
    <string name="product_name">物品名称</string>
    <string name="departure_label">出发地: </string>
    <string name="destination_label">目的地: </string>
    <string name="departDate_label">出发时间: </string>
    <string name="arrivalDate_label">到达时间: </string>
    <string name="contact_phone">联系电话</string>
    <string name="menu_settings">设置</string>
    <string name="myOrder">我的订单</string>
    <string name="myReceivedOrder">我的接单</string>
    <string name="myFavorite">我的收藏</string>
    <string name="myRelease">我的发布</string>
    <string name="help">帮助</string>
    <string name="mysetting">我的设置</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="schedule_release_text">发布行程(需上传身份证照)</string>
    <string name="i_am_seller_label">我是代购人</string>
    <string name="yes_label">是</string>
    <string name="no_label">否</string>
    <string name="cancel">取消</string>
    <string name="ipaddress">IP Address</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="year_format">年</string>
    <string name="month_format">月</string>
    <string name="day_format">日</string>
    <string name="submit">提交</string>
    <string name="select_time">选择时间</string>
    <string name="login_now">马上登录</string>
    <string name="chat_send">发送</string>
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to send downstream messages to this app.</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token, sending the fetched token to the server or subscribing to the PubSub topic. Please try running the sample again.</string>
    <string name="category_wine">红酒</string>
    <string name="category_alcohol">高度酒</string>
    <string name="category_baby_product">婴儿用品</string>
    <string name="category_bag">包包</string>
    <string name="category_clothes">衣服</string>
    <string name="category_local_specialties">土特产</string>
    <string name="category_health">保健品</string>
    <string name="category_beauty">化妆品-香水</string>
    <string name="category_toys">玩具</string>
    <string name="category_electronics">电子产品</string>
    <string name="category_computer">电脑</string>
    <string name="category_jewellery">首饰</string>
    <string name="category_shoe">鞋类</string>
    <string name="category_watch">手表</string>
    <string name="category_sports_fitness">体育用品</string>
    <string name="category_tobaco">烟草</string>
    <string name="category">类别</string>
    <string name="account_and_security">账户与安全</string>
    <string name="personal_document">个人资料</string>
    <string name="avatar">头像</string>
    <string name="gender">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="myAddress">我的地址</string>
    <string name="phoneNumber">电话号码</string>
    <string name="newPhoneNumber">新电话号码</string>
    <string name="emailAddress">电子邮件</string>
    <string name="ModifyPhone">修改手机号码</string>
    <string name="ModifyEmail">修改绑定邮箱</string>
    <string name="confirm_submit">确认提交</string>
    <string name="ModifyPassword">修改登录密码</string>
    <string name="origin_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="add_payment">添加支付方式</string>
    <string name="payment_info">我的支付信息</string>
    <string name="payment_account">我的支付宝账户:</string>
    <string name="newEmail">新的邮箱</string>
    <string name="nextStep">下一步</string>
    <string name="checksumPage">安全校验</string>
    <string name="checksum">校验码</string>
    <string name="reset_code">校验码</string>
    <string name="get_reg_code">获取校验码</string>
    <string name="get_reset_code">获取校验码</string>
    <string name="reget_reg_code">重新获取</string>
    <string name="reset_password">重置密码</string>
    <string name="create_address">新建地址</string>
    <string name="collection_name">收货人姓名</string>
    <string name="collection">收货人</string>
    <string name="country">国家</string>
    <string name="province">省/市</string>
    <string name="detail_address">详细地址</string>
    <string name="create_order">创建订单</string>
    <string name="create_order_description">订单描述</string>
    <string name="all_orders">全部订单</string>
    <string name="order_to_pay">等待付款</string>
    <string name="order_to_deliver">等待发货</string>
    <string name="order_to_collect">等待收货</string>
    <string name="order_to_comment">等待评价</string>
    <string name="order_to_confirm">等待确认</string>
    <string name="order_state">订单状态</string>
    <string name="order_detail">订单详情</string>
    <string name="order_detail2">订单描述</string>
    <string name="submit_order">确认下单</string>
    <string name="order_seller">卖家</string>
    <string name="order_buyer">买家</string>
    <string name="order_traveller">代购人</string>
    <string name="order_owner">订购人</string>
    <string name="pay_order">付款</string>
    <string name="cancel_order">取消订单</string>
    <string name="delete_order">删除订单</string>
    <string name="confirm_order">确认订单</string>
    <string name="order_quantity_label1">共计商品:</string>
    <string name="order_quantity_label2">件</string>
    <string name="order_price_label">合计价格:</string>
    <string name="order_detail_address">收货地址</string>
    <string name="collection_place">填写收货地址</string>
    <string name="collection_place2">填写详细收货地址</string>
    <string name="remarks">备注</string>
    <string name="cost">费用</string>
    <string name="product_price">商品价格</string>
    <string name="service_charge">服务费</string>
    <string name="confirm_order2">确认收单</string>
    <string name="confirm_deliver">确认发货</string>
    <string name="confirm_collect">确认收货</string>
    <string name="buyer_price">买方出价(单件):</string>
    <string name="seller_price">卖方议价</string>
    <string name="negotiated_price">最终定价(单件)</string>
    <string name="checkout_counter">收银台</string>
    <string name="order_number">订单编号: </string>
    <string name="payment_account2">支付账号</string>
    <string name="payment_login_pwd">登录密码</string>
    <string name="payment_method">支付方式</string>
    <string name="payment_action">去付款</string>
    <string name="alipay_payment_method">支付宝支付</string>
    <string name="other_payment_method">其它支付</string>
    <string name="language_code">zh-s</string>
    <string name="only_choose_num1">只可选</string>
    <string name="only_choose_num2">张图片了</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="choose_album">从相册中选取</string>
    <string name="demand_no_photo">该需求没有照片</string>
    <string name="iti_no_photo">该行程没有照片</string>
    <string name="date_format">yyyy年MM月dd日</string>
    <string name="date_format2">yyyy-MM-dd hh:mm:ss</string>
    <string name="long_date_format" translatable="false">yyyyMMddHHmmss</string>
    <string name="login_hint">用户名/邮箱</string>
    <string name="enter_username_hint">请输入用户名</string>
    <string name="enter_password_hint">请输入密码</string>
    <string name="enter_password_hint2">请再次输入密码</string>
    <string name="enter_email_hint">请输入绑定邮箱地址</string>
    <string name="enter_email_hint2">请输入邮箱地址</string>
    <string name="enter_reg_code">请输入校验码</string>
    <string name="enter_reset_code">请输入校验码</string>
    <string name="modify_email_hint">绑定邮箱最好已绑定手机</string>
    <string name="modify_email_hint_2">我们已经发送了校验码到你的邮箱:</string>
    <string name="surname">姓</string>
    <string name="name">名</string>
    <string name="fillWithSource">填写出发地</string>
    <string name="fillWithDestination">填写目的地</string>
    <string name="fillWithStartTime">填写出发时间</string>
    <string name="fillWithArriveTime">填写到达时间</string>
    <string name="fillWithDetail">填写详细描述</string>
    <string name="fillWithServiceFee">填写服务费</string>
    <string name="fillWithPriorityThing">填写优先携带物品</string>
    <string name="fillWithMaxWeight">填写携带物品最大质量</string>
    <string name="fillWithChang">长</string>
    <string name="fillWithKuan">宽</string>
    <string name="fillWithGao">高</string>
    <string name="fillWithProductName">填写物品名称</string>
    <string name="fillWithKind">填写物品类别</string>
    <string name="fillWithReceivePlace">填写收货地(城市)</string>
    <string name="fillWithExpectTime">填写预期时间</string>
    <string name="fillWithBrand">填写品牌</string>
    <string name="fillWithOriginPlace">填写原产地(国家)</string>
    <string name="fillWithNum">填写数量</string>
    <string name="fillWithPrice">填写单件价格</string>
    <string name="fillWithDescription">填写描述</string>
    <string name="payment_account_hint">邮件／手机号</string>
    <string name="notif_unkown_failure">出现未知错误</string>
    <string name="notif_get_reg_code_failed">网络不给力，无法获取校验码</string>
    <string name="notif_get_reg_code_duplicated">校验码已发送</string>
    <string name="notif_get_reg_code_succeed">校验码已发送，请查看邮件</string>
    <string name="notif_create_subscriber_failed">网络不给力，注册用户失败</string>
    <string name="notif_create_subscriber_no_reg_code">注册用户失败, 请获取验证码</string>
    <string name="notif_create_subscriber_time_expired">验证码过期，请重新获取</string>
    <string name="notif_create_subscriber_user_exists">用户已存在</string>
    <string name="notif_create_subscriber_not_match">校验码不匹配</string>
    <string name="notif_update_subscriber_succeed">用户信息已更新</string>
</resources>