<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/more_select_layout"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="right">

    <Button
        android:id="@+id/requiremnet_get_destination_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/collect_location1"
        android:textColor="@color/releaseChoiceButtonColor"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/requirement_hign_score_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hignscore"
        android:textColor="@color/releaseChoiceButtonColor"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/requiremnt_hign_fee_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hignfee"
        android:textColor="@color/releaseChoiceButtonColor"
        android:textStyle="bold" />
</LinearLayout>
