<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/imagePopupMenu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_gravity="bottom">

    <Button
        android:id="@+id/selectImageFromCamera"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="20dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_photo"
        android:textSize="14dp"
        android:textColor="@color/buttonTextColor"
        android:background="@drawable/gogou_main_button"
        />

    <Button
        android:id="@+id/selectImageFromAlbum"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="5dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_album"
        android:textSize="14dp"
        android:textColor="@color/buttonTextColor"
        android:background="@drawable/gogou_main_button"
        />

    <Button
        android:id="@+id/selectImageCancel"
        android:layout_marginTop="5dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginBottom="10dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="14dp"
        android:textColor="@color/buttonTextColor"
        android:background="@drawable/gogou_main_button"
        />
</LinearLayout>
