<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/genderPopupMenu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_gravity="bottom">

    <Button
        android:id="@+id/selectMaleBtn"
        android:layout_marginLeft="@dimen/layout_padding_left_right"
        android:layout_marginRight="@dimen/layout_padding_left_right"
        android:layout_marginTop="@dimen/layout_padding_top_bottom1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/male"
        android:textSize="14dp"
        android:textColor="@color/buttonTextColor"
        android:background="@drawable/gogou_main_button"
        />

    <Button
        android:id="@+id/selectFemaleBtn"
        android:layout_marginLeft="@dimen/layout_padding_left_right"
        android:layout_marginRight="@dimen/layout_padding_left_right"
        android:layout_marginTop="@dimen/button_padding_top_bottom2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/female"
        android:textSize="14dp"
        android:textColor="@color/buttonTextColor"
        android:background="@drawable/gogou_main_button"
        />

    <Button
        android:id="@+id/selectGenderCancel"
        android:layout_marginTop="@dimen/button_padding_top_bottom2"
        android:layout_marginLeft="@dimen/layout_padding_left_right"
        android:layout_marginRight="@dimen/layout_padding_left_right"
        android:layout_marginBottom="@dimen/button_padding_top_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="14dp"
        android:textColor="@color/buttonTextColor"
        android:background="@drawable/gogou_main_button"
        />
</LinearLayout>
