<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/list_item_image_pad" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_item_padding_top_bottom"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/departure_label"
            android:textColor="@color/aluminum"
            android:textSize="@dimen/list_item_title" />

        <TextView
            android:id="@+id/departureTV"
            android:layout_width="@dimen/list_item_iti_title_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/list_item_title"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingLeft="@dimen/list_item_padding_left_right"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination_label"
            android:textColor="@color/aluminum"
            android:textSize="@dimen/list_item_title"
            android:paddingLeft="@dimen/list_item_pad"/>

        <TextView
            android:id="@+id/destinationTV"
            android:layout_width="@dimen/list_item_iti_title_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/list_item_title"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingLeft="@dimen/list_item_padding_left_right"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_item_padding_top_bottom"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/departDate_label"
            android:textColor="@color/aluminum"
            android:textSize="@dimen/list_item_subtitle" />

        <TextView
            android:id="@+id/departDateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:paddingLeft="@dimen/list_item_padding_left_right"
            android:textSize="@dimen/list_item_subtitle"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrivalDate_label"
            android:textColor="@color/aluminum"
            android:paddingLeft="@dimen/list_item_padding_left_right"
            android:textSize="@dimen/list_item_subtitle" />

        <TextView
            android:id="@+id/arrivalDateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/list_item_subtitle"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>
