<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.ModifyEmailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/modifyEmailAppBar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/modifyEmailToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/appMainColor"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <Button
                android:id="@+id/modifyEmailBackBtn"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/button_padding_left_right"
                android:background="@drawable/backward"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ModifyEmail"
                android:textColor="@color/toolbarTextColor"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/modifyEmailLabel2"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/setting_item_height"
                android:layout_marginLeft="@dimen/layout_padding_left_right"
                android:paddingBottom="@dimen/layout_padding_top_bottom"
                android:text="@string/modify_email_hint"
                android:textColor="@color/monsoon"
                android:typeface="sans"
                android:textSize="@dimen/list_item_subtitle"
                android:gravity="bottom" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/setting_item_bg1"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:id="@+id/newEmailLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/setting_item_height"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/layout_padding_left_right"
                    android:text="@string/newEmail"
                    android:textColor="@color/user_text_color"
                    android:typeface="sans"
                    android:textSize="@dimen/list_item_title" />

                <!-- new phone number -->
                <EditText
                    android:id="@+id/newEmailText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/newEmailLabel"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/layout_padding_left_right"
                    android:layout_marginRight="@dimen/button_padding_left_right"
                    android:hint="@string/enter_email_hint"
                    android:textSize="@dimen/list_item_title"
                    android:textColor="@color/user_text_color"
                    android:background="@android:color/transparent"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/layout_padding_top_bottom2">

            <!--<ProgressBar-->
            <!--style="?android:attr/progressBarStyleHorizontal"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/progressBar" />-->

            <Button
                android:id="@+id/modifyEmailNextStepButton"
                android:background="@drawable/gogou_main_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_marginLeft="@dimen/button_padding_left_right"
                android:layout_marginRight="@dimen/button_padding_left_right"
                android:text="@string/nextStep"
                android:textSize="@dimen/list_item_title"
                android:textColor="@color/buttonTextColor" />

        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>